fix: bug fixes to GUI